fix: adjusted logo size for better visibility

--- a/frontend/barks-and-bubbles-frontend/src/app/app.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/app.component.scss
@@ -61,6 +61,6 @@ form {
 
 .logo {
   object-fit: contain !important;
-  height: 5.25em;
+  height: 7em;
   padding: 1em 0.15em;
 }
